--- a/mobile/package.json
+++ b/mobile/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@react-native-community/cli": "latest",
+    "@react-native/metro-config": "^0.83.1",
     "babel-preset-expo": "^54.0.9"
   }
 }
