--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,6 +15,7 @@
     "@walletconnect/modal-react-native": "^1.1.0",
     "@walletconnect/react-native-compat": "^2.12.2",
     "expo": "^54.0.0",
+    "expo-asset": "^12.0.12",
     "expo-font": "~14.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-navigation-bar": "~4.0.0",
