--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/cinzel": "^0.2.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-google-signin/google-signin": "^16.1.1",
     "@walletconnect/modal-react-native": "^1.1.0",
     "@walletconnect/react-native-compat": "^2.12.2",
     "expo": "^54.0.0",
@@ -22,6 +23,7 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-get-random-values": "^1.10.0",
+    "react-native-iap": "^14.7.1",
     "react-native-sse": "^1.2.1",
     "react-native-url-polyfill": "^2.0.0"
   },
