--- a/mobile/android/gradle.properties
+++ b/mobile/android/gradle.properties
@@ -11,22 +11,16 @@
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
 org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
-kotlinVersion=2.0.21
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-org.gradle.parallel=true
+# org.gradle.parallel=true
 
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
-# Release signing
-MYAPP_RELEASE_STORE_FILE=sidequest-release.keystore
-MYAPP_RELEASE_KEY_ALIAS=sidequest
-MYAPP_RELEASE_STORE_PASSWORD=135800
-MYAPP_RELEASE_KEY_PASSWORD=135800
 
 # Enable AAPT2 PNG crunching
 android.enablePngCrunchInReleaseBuilds=true
@@ -47,11 +41,6 @@ newArchEnabled=false
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 
-# Use this property to enable edge-to-edge display support.
-# This allows your app to draw behind system bars for an immersive UI.
-# Note: Only works with ReactActivity and should not be used with custom Activity.
-edgeToEdgeEnabled=true
-
 # Enable GIF support in React Native images (~200 B increase)
 expo.gif.enabled=true
 # Enable webp support in React Native images (~85 KB increase)
@@ -66,6 +55,8 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
 
-# Specifies whether the app is configured to use edge-to-edge via the app config or plugin
-# WARNING: This property has been deprecated and will be removed in Expo SDK 55. Use `edgeToEdgeEnabled` or `react.edgeToEdgeEnabled` to determine whether the project is using edge-to-edge.
-expo.edgeToEdgeEnabled=true
+org.gradle.java.home=C:/Program Files/Android/Android Studio/jbr
+
+
+android.kotlinVersion=1.9.25
+
