--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,25 +11,25 @@
   },
   "dependencies": {
     "@expo-google-fonts/cinzel": "^0.2.3",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-google-signin/google-signin": "^16.1.1",
     "@walletconnect/modal-react-native": "^1.1.0",
     "@walletconnect/react-native-compat": "^2.12.2",
-    "expo": "^54.0.0",
-    "expo-asset": "^12.0.12",
-    "expo-font": "~14.0.10",
-    "expo-linear-gradient": "~15.0.8",
-    "expo-navigation-bar": "~4.0.0",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
+    "expo": "~52.0.28",
+    "expo-asset": "~11.0.3",
+    "expo-font": "~13.0.3",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-navigation-bar": "~4.0.1",
+    "react": "18.3.1",
+    "react-native": "0.76.6",
     "react-native-get-random-values": "^1.10.0",
-    "react-native-iap": "^14.7.1",
+    "react-native-iap": "12.16.1",
     "react-native-sse": "^1.2.1",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@react-native-community/cli": "latest",
-    "@react-native/metro-config": "^0.83.1",
-    "babel-preset-expo": "^54.0.9"
+    "@react-native/metro-config": "^0.76.6",
+    "babel-preset-expo": "~12.0.4"
   }
 }
