feat(ui): complete high-fantasy UI overhaul (Phase 3 & 4)
Includes DispositionMeter, FantasyCard, refactored screens (Story, Sessions, BuyCredits, Settings), and themed components.

--- a/ai-server-deployment.yaml
+++ b/ai-server-deployment.yaml
@@ -26,7 +26,15 @@ spec:
             - name: MODEL_PATH
               value: "/models"
             - name: DATA_DIR
-              value: "/workspace"
+              value: "/models/data"
+            - name: PAYMENT_WALLET_ADDRESS
+              value: "0x062F50dD65caEC59AF85605a66f8287b22565F06"
+            - name: USDT_CONTRACT_ADDRESS
+              value: "0xdAC17F958D2ee523a2206206994597C13D831ec7"
+            - name: PAYMENT_CONFIRMATIONS
+              value: "1"
+            - name: PAYMENT_POLL_INTERVAL
+              value: "15"
           volumeMounts:
             - name: model-data
               mountPath: /models
