--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,7 +7,10 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:android:play": "cd android && gradlew assemblePlayRelease",
+    "build:android:amazon": "cd android && gradlew assembleAmazonRelease",
+    "build:android:both": "cd android && gradlew assembleRelease"
   },
   "dependencies": {
     "@expo-google-fonts/cinzel": "^0.2.3",
